# pd_calibration

./: CITATION.cff  DATA_DISCLAMER.md  LICENSE  Makefile  README.md  TODO.MD  config.yml  main.py  makefile  poetry_command.txt  pyproject.toml  pytest.ini  requirements.txt
artifacts/: README.md
data/: README.md
docs/md_notes/: PD_TTC_PIT.md  TODO.MD  config_bis.md  credit_scoring_transfo.md  simulation_drift.md
docs/txt_notes/: project_structure.txt
experiments/: README.md  README_SIM.md
experiments/beta_binom_jeffreys/: make_table_beta_binom.py  plot_beta_binom.py  sim_beta_binom.py
experiments/binom/: plot_binom.py  sim_binom.py
experiments/binom_coverage/: make_table_binom.py  plot_binom.py  sim_binom.py
experiments/common/: intervals.py
experiments/plots/: style.py
ldp_application/: README.md  process_sp_base.py  run_sp_grade_plots.py  run_sp_grade_tables.py
notebook/: binning.ipynb  data_desc.csv  data_vis.ipynb  eda.ipynb  model.ipynb  pipeline.ipynb  pipeline.py  res_article.ipynb  res_cali.ipynb  rolling.py
plot_paper/: plot_beta_priors.py
replication/: Makefile  README.md
src/: README.md  apply_all_oos.py  apply_binning.py  apply_imputer.py  apply_master_scale.py  apply_model.py  cli.py  draft.py  estimate_ttc_macro.py  fit_binning.py  generate_report.py  generate_vintage_grade_report.py  impute_and_save.py  inspect_model.py  make_labels.py  make_splits_impute.py  recalibrate_master_scale.py  results.py  run_oos_backtest.py  train_model.py  train_model_alternative.py
test/: test_imputer.py
tests/: test_imputer.py
(+48 files in other folders)
